// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error page 1`] = `<ArticleListPageError />`;

exports[`2. a loading state 1`] = `
<authorArticlesWithImagesProvider>
  <Helmet>
    <title>
      
       | The Times & The Sunday Times
    </title>
    <meta
      content="Get up to date information and read all the latest articles from ."
      name="description"
    />
  </Helmet>
  <ArticleList
    articleListHeader={
      <AuthorProfileHead
        contractualTitle=""
        isLoading={true}
        jobTitle=""
        metaDescription=""
        name=""
        twitter=""
        uri=""
      />
    }
  />
</authorArticlesWithImagesProvider>
`;

exports[`3. an article list with images 1`] = `
<authorArticlesWithImagesProvider>
  <Helmet>
    <title>
      Name
       | The Times & The Sunday Times
    </title>
    <meta
      content="Camilla Long"
      name="description"
    />
  </Helmet>
  <ArticleList
    articleListHeader={
      <AuthorProfileHead
        biography={
          Array [
            Object {
              "attributes": Object {
                "value": "Camilla Long",
              },
              "children": Array [],
              "name": "text",
            },
          ]
        }
        contractualTitle="Contractual Title"
        isLoading={false}
        jobTitle="Job Title"
        metaDescription=""
        name="Name"
        twitter="twitter"
        uri="https://image.io"
      />
    }
  />
</authorArticlesWithImagesProvider>
`;

exports[`4. an article list without images 1`] = `
<authorArticlesNoImagesProvider>
  <Helmet>
    <title>
      Name
       | The Times & The Sunday Times
    </title>
    <meta
      content="Camilla Long"
      name="description"
    />
  </Helmet>
  <ArticleList
    articleListHeader={
      <AuthorProfileHead
        biography={
          Array [
            Object {
              "attributes": Object {
                "value": "Camilla Long",
              },
              "children": Array [],
              "name": "text",
            },
          ]
        }
        contractualTitle="Contractual Title"
        isLoading={false}
        jobTitle="Job Title"
        metaDescription=""
        name="Name"
        twitter="twitter"
        uri=""
      />
    }
  />
</authorArticlesNoImagesProvider>
`;

exports[`5. an article list header 1`] = `
<div>
  <div>
    <div>
      <div>
        <Image
          accessibilityLabel="author-image"
          aspectRatio={1}
          uri="https://image.io"
        />
      </div>
      <h1
        aria-level="1"
        role="heading"
      >
        Name
      </h1>
      <div>
        <h2
          aria-level="2"
          role="heading"
        >
          job title
        </h2>
      </div>
      <div>
        <div>
          <IconTwitter
            fillColour="currentColor"
            height={12}
            width={12}
          />
        </div>
        <TextLink
          testID="twitterLink"
          url="https://twitter.com/twitter"
        >
          @
          twitter
        </TextLink>
      </div>
      <div>
        <div>
          Camilla Long
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`6. an article list header with no bio, job title, name or twitter 1`] = `
<div>
  <div>
    <div>
      <div>
        <Image
          accessibilityLabel="author-image"
          aspectRatio={1}
          uri="https://image.io"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`7. an article list header loading 1`] = `
<div>
  <div>
    <div>
      <Gradient />
    </div>
  </div>
</div>
`;
